# python_modules

module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module06/alchemy/: __init__.py  elements.py  potions.py
module06/alchemy/grimoire/: spellbook.py  validator.py
module06/alchemy/transmutation/: __init__.py  advanced.py
module07/: explain.md
module07/ex0/: Card.py  CreatureCard.py  main.py
module07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
module07/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
module07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  main.py
module07/ex4/: Rankable.py  TournamentCard.py  TournamentPlatform.py  main.py
module08/: .gitignore
module08/ex0/: answers.txt  construct.py
module08/ex01/: loading.py  pyproject.toml  requirements.txt
module08/ex02/: .env.example  oracle.py
module09/ex0/: space_station.py
module09/ex1/: alien_contact.py
module09/ex2/: space_crew.py
module10/ex0/: lambda_spells.py
module10/ex1/: higher_magic.py
module10/ex2/: scope_mysteries.py
module10/ex3/: functools_artifacts.py
module10/ex4/: decorator_mastery.py
