[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "==3.10.12"
dependencies = [
    "pandas (==2.1.0)",
    "numpy (==1.26.0)",
    "matplotlib (==3.7.2)",
    "requests (==2.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
